# instasynth

./: README.md  config.json  dot_env_template  pyproject.toml  sample_synthetic_captions.csv
data/: synthetic_original.csv
instasynth/: config.py  data_generation.py  embedding_generation.py  evaluation.py  experiment.py  utils.py
instasynth/prompts/: nonsponsored_random_examples.json  prompt_template.json  sponsored_random_examples.json
notebooks/: README.md  bootstrapping_real_sample.ipynb  content_analysis.ipynb  evaluation.ipynb  example.ipynb  exploring.ipynb  paper_experiments.ipynb
prompts/: nonsponsored_base_v1.json  nonsponsored_base_v2.json  nonsponsored_examples_v1.json  nonsponsored_examples_v2.json  sponsored_base_v1.json  sponsored_base_v2.json  sponsored_examples_v1.json  sponsored_examples_v2.json
scripts/: generate_gpt_embeddings.py
