[tool.poetry]
name = "instasynth"
version = "0.1.0"
description = "Synthetic Instagram Post Generation for Social Media Research"
authors = ["thalesbertaglia <contact@thalesbertaglia.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
create = true
in-project = true