[tool.poetry]
name = "instasynth"
version = "0.1.0"
description = "Synthetic Instagram Post Generation for Social Media Research"
authors = ["thalesbertaglia <contact@thalesbertaglia.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
langchain = "^0.0.266"
openai = "^0.27.8"
python-dotenv = "^1.0.0"
ipykernel = "^6.25.1"
pandas = "^2.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
create = true
in-project = true