[tool.poetry]
name = "instasynth"
version = "0.1.0"
description = "Synthetic Instagram Post Generation for Social Media Research"
authors = ["thalesbertaglia <contact@thalesbertaglia.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
openai = "^0.27.8"
python-dotenv = "^1.0.0"
ipykernel = "^6.25.1"
pandas = "^2.0.3"
matplotlib = "^3.7.2"
textstat = "^0.7.3"
nltk = "^3.8.1"
emoji = "^2.8.0"
seaborn = "^0.12.2"
scikit-learn = "^1.3.0"
tiktoken = "^0.4.0"
faiss-cpu = "^1.7.4"
networkx = "^3.1"
python-louvain = "^0.16"
rouge = "^1.0.1"
jinja2 = "^3.1.2"
pyperclip = "^1.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
create = true
in-project = true